# ctx-lab

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: styles.css
crates/ctx-lab-app/: Cargo.toml  tauri.conf.json
crates/ctx-lab-app/icons/: icon.icns
crates/ctx-lab-app/src/: commands.rs  db.rs  events.rs  main.rs  reconcile.rs  tray.rs  watcher.rs
crates/ctx-lab-app/tests/: e2e_test.rs
crates/ctx-lab-core/: Cargo.toml
crates/ctx-lab-core/src/: claude_md.rs  config.rs  errors.rs  git_ops.rs  models.rs  queue.rs  roadmap.rs  sanitize.rs  schema.rs  storage.rs  transcript.rs
crates/ctx-lab-core/tests/: atomic_write_stress.rs
crates/ctx-lab-hook/: Cargo.toml
crates/ctx-lab-hook/src/: checkpoint.rs  doctor.rs  event_bridge.rs  install.rs  main.rs  process_queue.rs  session_end.rs  session_start.rs  stop.rs  summary.rs  uninstall.rs
crates/ctx-lab-hook/tests/: integration_test.rs
crates/seslog-app/: Cargo.toml  tauri.conf.json
crates/seslog-app/assets/: styles.css
crates/seslog-app/src/: bundle.rs  commands.rs  db.rs  events.rs  lib.rs  logging.rs  main.rs  process_watcher.rs  reconcile.rs  state.rs  sync.rs  tray.rs  watcher.rs
crates/seslog-app/src/ui/: app.rs  components.rs  dashboard.rs  icons.rs  mod.rs  overview.rs  project_detail.rs  session_detail.rs  settings.rs  sidebar.rs
crates/seslog-app/tests/: e2e_test.rs
crates/seslog-core/: Cargo.toml
crates/seslog-core/src/: claude_md.rs  config.rs  errors.rs  lib.rs  models.rs  queue.rs  roadmap.rs  schema.rs  storage.rs  transcript.rs
crates/seslog-core/tests/: atomic_write_stress.rs
crates/seslog-hook/: Cargo.toml
crates/seslog-hook/src/: checkpoint.rs  doctor.rs  event_bridge.rs  install.rs  main.rs  process_queue.rs  session_end.rs  session_start.rs  stop.rs  summary.rs  uninstall.rs  utils.rs
crates/seslog-hook/tests/: integration_test.rs
docs/: UI-test.md  test-instructions-v4.md  test-instructions-v5.md  test-report-v2.md  test-report-v3.md  test-report-v4.md  test-report-v5.md  test-report.md
docs/plans/: 2026-02-19-ctx-lab-faz-a-impl.md  2026-02-20-ctx-lab-faz-b-impl.md  2026-02-21-ctx-lab-faz-c-impl.md  ctx-lab-faz-a.md  ctx-lab-faz-b.md  ctx-lab-faz-c.md  ctx-lab-faz-d.md  ctx-lab-overview.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  main.css  main.tsx
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx  CommandPalette.tsx  DecisionHistory.tsx  ErrorBoundary.tsx  OverviewTable.tsx  ProgressBar.tsx  ProjectCard.tsx  QuickResume.tsx  RoadmapView.tsx  SessionList.tsx  SessionTimeline.tsx  ThemeToggle.tsx  ZoomControl.tsx
frontend/src/components/ui/: accordion.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  progress.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  switch.tsx  table.tsx  tooltip.tsx
frontend/src/hooks/: useProjects.ts  useRoadmap.ts  useSessions.ts  useTauriEvent.ts
frontend/src/lib/: tauri.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Overview.tsx  ProjectDetail.tsx  ProjectPage.tsx  SessionPage.tsx  Settings.tsx
src/: bundle.rs  commands.rs  db.rs  lib.rs  logging.rs  main.rs  reconcile.rs  state.rs  sync.rs  tray.rs  watcher.rs
tests/fixtures/: branching_roadmap.md
tests/fixtures/hook_payloads/: 01_session_start_simple.json  02_session_start_new_project.json  03_post_tool_use.json  04_session_end_normal.json  05_stop_payload.json
tests/fixtures/transcripts/: real_claude_code.jsonl  simple_session.jsonl
