[package]
name = "ctx-lab"
version = "0.1.0"
edition = "2021"

[lib]
name = "ctx_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-desktop = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
git2 = "0.19"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
sysinfo = "0.32"
fd-lock = "4"
dirs = "5"
hostname = "0.4"
regex = "1"
zip = "2"
