[workspace]
members = ["crates/seslog-core", "crates/seslog-hook", "crates/seslog-app"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
git2 = { version = "0.19", default-features = false }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
fd-lock = "4"
dirs = "6"
regex = "1"
once_cell = "1"
tempfile = "3"
hostname = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
sysinfo = "0.33"
dioxus = { version = "0.6", features = ["desktop"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
