[package]
name = "ctx-lab-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
ctx-lab-core = { path = "../ctx-lab-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
hostname.workspace = true
toml.workspace = true
dirs.workspace = true
