[package]
name = "seslog-app"
version = "0.1.0"
edition = "2021"

[dependencies]
seslog-core = { path = "../seslog-core" }
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
toml.workspace = true
hostname.workspace = true
notify = "7"
sysinfo = "0.33"
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
regex.workspace = true
dirs.workspace = true
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile.workspace = true
