[package]
name = "seslog"
version = "0.1.0"
edition = "2021"

[dependencies]
seslog-core = { path = "../seslog-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
hostname.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
